@@ -25,6 +25,7 @@ namespace mesmer
 		QMRotor(const char* id) : m_id(id), m_Sym(1.0), m_OpticalSym(1.0), m_SpinMultiplicity(1) { Register(); }
 
     virtual const char* getID() { return m_id; }
+    virtual string getName() { return string(m_id); }
     virtual bool includesRotations() { return true; }
 
     virtual QMRotor* Clone() { return new QMRotor(*this); }
